# caucus

./: Cargo.toml  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/caucus-cli/: Cargo.toml
crates/caucus-cli/src/: main.rs
crates/caucus-cli/src/commands/: ask.rs  bench.rs  compare.rs  council.rs  debate.rs  doctor.rs  mod.rs  profiles.rs  review.rs  run.rs  serve.rs
crates/caucus-core/: Cargo.toml
crates/caucus-core/examples/: basic_consensus.rs  pipeline.rs
crates/caucus-core/src/: adapters.rs  config.rs  error.rs  fanout.rs  lib.rs  pipeline.rs  process.rs  provider.rs  types.rs
crates/caucus-core/src/format/: detailed.rs  mod.rs  structured.rs  supreme_court.rs
crates/caucus-core/src/strategy/: debate.rs  judge.rs  mod.rs  vote.rs
crates/caucus-core/tests/: integration_test.rs  provider_profile_test.rs
crates/caucus-core/tests/fixtures/: legacy_deep_profile.toml
crates/caucus-python/: Cargo.toml  build.rs
crates/caucus-python/src/: lib.rs
crates/conroute-cli/: Cargo.toml
crates/conroute-cli/src/: main.rs
crates/conroute-cli/src/commands/: ask.rs  bench.rs  compare.rs  debate.rs  mod.rs  serve.rs
crates/conroute-core/: Cargo.toml
crates/conroute-core/examples/: basic_consensus.rs  pipeline.rs
crates/conroute-core/src/: lib.rs
crates/conroute-core/src/format/: mod.rs
crates/conroute-core/src/strategy/: hybrid.rs  mod.rs  semantic.rs
crates/conroute-core/tests/: integration_test.rs
crates/conroute-python/: Cargo.toml
crates/conroute-python/python/conroute/: __init__.py
crates/conroute-python/src/: lib.rs
examples/: caucus.toml  config.toml  debate-supreme-court.md  debate-supreme-court.txt  detailed.md  json.md  plain.md  plain.txt  review-receipt.md  supreme-court.md  supreme-court.txt  verbose.md  verbose.txt
tests/integration/: consensus_test.rs
