[package]
name = "conroute-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for conroute multi-LLM consensus engine"

[[bin]]
name = "conroute"
path = "src/main.rs"

[dependencies]
conroute-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
colored = "2"
dotenvy = "0.15"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
